compiler/testData/cli/jvm/diagnosticsOrder.out
compiler/testData/cli/jvm/diagnosticsOrder1.kt:1:5: error: conflicting declarations: public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int
konst x = 5
    ^
compiler/testData/cli/jvm/diagnosticsOrder1.kt:2:5: error: conflicting declarations: public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int
konst x = 5
    ^
compiler/testData/cli/jvm/diagnosticsOrder1.kt:3:5: error: conflicting declarations: public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int
konst x = 5
    ^
compiler/testData/cli/jvm/diagnosticsOrder1.kt:4:5: error: conflicting declarations: public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int
konst x = 5
    ^
compiler/testData/cli/jvm/diagnosticsOrder1.kt:5:5: error: conflicting declarations: public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int
konst x = 5
    ^
compiler/testData/cli/jvm/diagnosticsOrder1.kt:6:5: error: conflicting declarations: public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int
konst x = 5
    ^
compiler/testData/cli/jvm/diagnosticsOrder1.kt:7:5: error: conflicting declarations: public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int, public konst x: Int
konst x = 5
    ^
compiler/testData/cli/jvm/diagnosticsOrder2.kt:1:5: error: conflicting declarations: public konst y: Int, public konst y: Int
konst y = 5
    ^
compiler/testData/cli/jvm/diagnosticsOrder2.kt:2:5: error: conflicting declarations: public konst y: Int, public konst y: Int
konst y = 5
    ^
COMPILATION_ERROR